# ha-adaptive-thermostat

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  PLAN-manifold-transport-delay.md  PLAN-open-window-detection.md  PLAN-predictive-preheat.md  PLAN-steady-state-tracking.md  PLAN-valve-exercise.md  PLAN.md  README.md  THERMAL_COUPLING_PLAN.md  auto.md  cold-start-detection.json  floor-thermal-mass.json  hacs.json  humidity-detection.md  learning-persistence.json  progress.txt  pyproject.toml  requirements-test.txt  review.json  stories-auto-apply-phase3.json  supply-type-plan.md  supply-type-stories.json  thermal-coupling-sketch.md  thermal-coupling.json
docs/: AUTO_APPLY_CARDS.md  LEARNING_STATUS_CARDS.md  TROUBLESHOOTING_LEARNING_ATTRIBUTES.md  wiki-Automatic-PID-Application.md  wiki-Configuration-Reference-floor_construction.md  wiki-Humidity-Detection.md  wiki-PID-Control-floor_construction.md
tests/: conftest.py  test_actuator_wear.py  test_adaptive_convergence.py  test_adaptive_pid.py  test_auto_apply.py  test_central_controller.py  test_charts.py  test_climate.py  test_climate_config.py  test_climate_init.py  test_climate_pid_gains.py  test_climate_preheat.py  test_climate_schema.py  test_comfort_sensors.py  test_const.py  test_const_preheat.py  test_contact_sensors.py  test_control_output.py  test_convergence_thresholds.py  test_coordinator.py  test_coupling_integration.py  test_cross_feature_interactions.py  test_cycle_analysis.py  test_cycle_events_final.py  test_cycle_tracker.py  test_demand_switch.py  test_disturbance_rejection.py  test_energy.py  (+60 more)
(+86 files in other folders)
