[tool.semantic_release]
major_on_zero = false
version_toml = ["pyproject.toml:project.version"]
version_variables = [
    "custom_components/adaptive_thermostat/manifest.json:version"
]
tag_format = "v{version}"
branch = "main"
commit_message = "chore(release): {version}"
build_command = ""

[tool.semantic_release.changelog]
changelog_file = ""

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "docs", "style", "refactor", "perf", "test", "chore"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[project]
name = "adaptive-thermostat"
version = "0.29.0"
description = "Home Assistant custom component for PID-based thermostat control with adaptive learning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
